# online-library

./: LICENSE  README.md
back/: .env.example  main.py  pyproject.toml  requirements.txt
back/app/: main.py  model_registry.py
back/app/authors/: models.py  routers.py  services.py
back/app/bookclasses/: models.py  routers.py  services.py
back/app/books/: models.py  routers.py  services.py
back/app/categories/: models.py  routers.py  services.py
back/app/classes/: models.py  routers.py  services.py
back/app/config/: config.py  db.py
back/app/files/: models.py  routers.py  services.py
back/app/links/: models.py
back/app/publishers/: models.py  routers.py  services.py
back/app/recmodel/: services.py
back/app/seeds/: books.py  default_user.py  loc_classification.json
back/app/series/: models.py  routers.py  services.py
back/app/subclasses/: models.py  routers.py  services.py
back/app/subjects/: models.py  routers.py  services.py
back/app/users/: auth.py  models.py  routers.py  services.py
back/doc/: LoC_classification.md  pgmarc_fields.md
back/scripts/: seed.py  seed_book_embeddings.py  seed_books.py  seed_db.py  seed_default_user.py
front/: .env.example  index.html  package-lock.json  package.json
front/src/: App.tsx  index.css
front/src/components/: BookCard.tsx  BookList.tsx  Button.tsx  CatCard.tsx  CatListCard.tsx  DownloadButton.tsx  Header.tsx  LoginCard.tsx  SearchBar.tsx  SignUpCard.tsx  SubmitButton.tsx  TextInput.tsx
front/src/hooks/: useHandleOutsideClick.ts
front/src/pages/: BookInfoPage.tsx  BookListingPage.tsx  CategoriesPage.tsx  HomePage.tsx  LoadingPage.tsx  LoginPage.tsx
front/src/services/: AuthContext.ts  AuthProvider.tsx  api.ts
ml/: .gitignore  pyproject.toml  requirements.txt
ml/src/: data_preparation.py  data_preprocessing.py  eda.py  loc_classification.json  test_tfidf.py  tfidf.py  tfidf_data_prep.py  tfidf_data_preprocessing.py  tfidf_preprocessing.py  tfidf_test.py  tfidf_train.py
