[project]
name = "back"
version = "0.1.0"
description = "Online Library API"
readme = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.120.1",
    "joblib==1.5.3",
    "pgvector==0.4.2",
    "psycopg2-binary==2.9.11",
    "pwdlib[argon2]==0.3.0",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "pymarc==5.3.1",
    "python-dotenv==1.2.1",
    "scikit-learn==1.8.0",
    "spacy==3.8.11",
    "sqlmodel==0.0.27",
    "tqdm==4.67.1",
    "xx-ent-wiki-sm",
]

[tool.ty.environment]
root = [".", "./app"]

[tool.uv.sources]
xx-ent-wiki-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl" }
