[project]
name = "back"
version = "0.1.0"
description = "Online Library API"
readme = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "fugashi-plus>=1.5.2.post1",
    "jieba>=0.42.1",
    "joblib>=1.5.3",
    "konlpy>=0.6.0",
    "pandas>=3.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pymarc>=5.3.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "stop-words>=2025.11.4",
    "tltk>=1.10",
    "underthesea>=9.1.4",
]

[tool.ty.environment]
root = [".", "./app"]
