[project]
name = "ml"
version = "0.1.0"
description = "The module for ML model training for the online library recommender system"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.8",
    "nltk==3.9.2",
    "numpy==2.4.0",
    "pandas==2.3.3",
    "pymarc==5.3.1",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "spacy==3.8.11",
    "tqdm==4.67.1",
    "xx-ent-wiki-sm",
]

[tool.uv.sources]
xx-ent-wiki-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
