[project]
name = "ml"
version = "0.1.0"
description = "The module for ML model training for the online library recommender system"
requires-python = ">=3.11"
dependencies = [
    "fugashi-plus>=1.5.2.post1",
    "jieba>=0.42.1",
    "konlpy>=0.6.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pymarc>=5.3.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "stop-words>=2025.11.4",
    "tltk>=1.10",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
    "underthesea>=9.1.4",
]

[tool.uv.sources]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
